[gd_scene load_steps=18 format=2]

[ext_resource path="res://Prefabs/System/EventPhase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/UI/region.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/publicdomainPack/skull.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/UI/NavBannerAnimated.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sprites/publicdomainPack/column3.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/defaultTheme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/Sprites/Misc/mask_alpha_region.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/publicdomainPack/skull2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/UI/blade1_bg.png" type="Texture" id=9]
[ext_resource path="res://Prefabs/UI/eventOption.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Sprites/UI/blade1_trim.png" type="Texture" id=11]
[ext_resource path="res://Assets/Audio/UI/misc_menu_2.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Audio/UI/misc_sound.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=2]
resource_name = "HideOptions"
length = 1.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("Column1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1790, -0.25, 0, 0.25, 0, 1790, -0.25, 0, 0.25, 0, 1790, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Column1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1314, -0.25, 0, 0.25, 0, 1314, -0.25, 0, 0.25, 0, 2371, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Column1/Description:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -323.027, -0.25, 0, 0.25, 0, -111.292, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Column1/Description:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -273.945, -0.25, 0, 0.25, 0, -273.945, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../ResultsText:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 963, -0.25, 0, 0.25, 0, 963, -0.25, 0, 0.25, 0, 963, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../ResultsText:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1196, -0.25, 0, 0.25, 0, 977, -0.25, 0, 0.25, 0, 504, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.5 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../ResultsText:modulate:r")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.5 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("../ResultsText:modulate:g")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.5 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("../ResultsText:modulate:b")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.5 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("../ResultsText:modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.5 )
}
tracks/10/type = "method"
tracks/10/path = NodePath("..")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_viewing_options"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "HideResults"
tracks/0/type = "bezier"
tracks/0/path = NodePath("../ResultsText:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 963, -0.25, 0, 0.25, 0, 963, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../ResultsText:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 504, -0.25, 0, 0.25, 0, 1205, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../ResultsText:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../ResultsText:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../ResultsText:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../ResultsText:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/6/type = "method"
tracks/6/path = NodePath("..")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_phase"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("../ResultsText:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 963, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../ResultsText:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1205, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=1]
resource_name = "reveal"
length = 2.0
step = 0.03
tracks/0/type = "bezier"
tracks/0/path = NodePath("Column1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -84.711, -0.25, 0, 0.25, 0, 0, -0.237297, 31.6396, 0.06, -8, 0, -0.06, -9, 0.207291, 31.0936 ),
"times": PoolRealArray( 0, 0.3, 0.48 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Column1/Description:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -120.902, -0.249995, -0.442353, 0.48, 0.849335, -323.027, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.48, 1.26 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Column1/Description/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.99, 1.56 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Column1/Description/Option1:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 703.429, -0.25, 0, 0.25, 0, 703.429, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.26, 1.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Column1/Description/Option1:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 31.2293, -0.25, 0, 0.25, 0, 182.237, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.26, 1.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Column1/Description/Option3:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 703.429, -0.25, 0, 0.25, 0, 700.562, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.26, 1.98 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Column1/Description/Option3:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -28.9826, -0.25, 0, 0.25, 0, 476.606, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.26, 1.98 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Column1/Description/Option2:position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 703.429, -0.25, 0, 0.25, 0, 693.872, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.26, 1.71 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Column1/Description/Option2:position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0.645477, -0.25, 0, 0.25, 0, 316.041, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.26, 1.71 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("../ResultsText:position:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 963, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("../ResultsText:position:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1211, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("../ResultsText:modulate:r")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("../ResultsText:modulate:g")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("../ResultsText:modulate:b")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("../ResultsText:modulate:a")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "value"
tracks/15/path = NodePath("Column1:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1790, 1287 ) ]
}

[node name="EventPhase" type="Node2D" groups=["EventPhase"]]
script = ExtResource( 1 )

[node name="DescriptionAnimated" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="DescriptionAnimated"]
anims/HideOptions = SubResource( 2 )
anims/HideResults = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/reveal = SubResource( 1 )

[node name="Column1" type="Sprite" parent="DescriptionAnimated"]
position = Vector2( 1790, 1314 )
rotation = -1.47849
scale = Vector2( 3.22574, 3.22574 )
z_index = 1
texture = ExtResource( 5 )
offset = Vector2( 2.78699, -244.285 )
flip_h = true

[node name="Description" type="Sprite" parent="DescriptionAnimated/Column1"]
self_modulate = Color( 0.701961, 0.690196, 0.764706, 1 )
light_mask = 4
position = Vector2( -323.027, -273.945 )
scale = Vector2( 0.324361, 0.324361 )
z_index = -1
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="DescriptionAnimated/Column1/Description"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 4
margin_left = 504.0
margin_top = -123.0
margin_right = 1782.0
margin_bottom = 603.0
rect_scale = Vector2( 0.327834, 0.327834 )
theme = ExtResource( 6 )
text = "The whistling of the ocean breeze carries a haunting melody. After a moment, the lookout spots a small islet port-ward."
align = 1
autowrap = true

[node name="Option3" parent="DescriptionAnimated/Column1/Description" instance=ExtResource( 10 )]
visible = false
position = Vector2( 703.429, -28.9826 )

[node name="Option2" parent="DescriptionAnimated/Column1/Description" instance=ExtResource( 10 )]
visible = false
position = Vector2( 703.429, 0.645477 )

[node name="Option1" parent="DescriptionAnimated/Column1/Description" instance=ExtResource( 10 )]
visible = false
position = Vector2( 703.429, 31.2293 )

[node name="Column1" type="Sprite" parent="DescriptionAnimated/Column1"]
position = Vector2( 2.79004, -81.2217 )
texture = ExtResource( 5 )
flip_h = true
flip_v = true

[node name="Skull2" type="Sprite" parent="DescriptionAnimated/Column1"]
position = Vector2( 0, -339.767 )
rotation = -0.467424
scale = Vector2( 0.672796, 0.672796 )
texture = ExtResource( 8 )

[node name="Skull" type="Sprite" parent="DescriptionAnimated/Column1"]
position = Vector2( -4.65015, -373.248 )
rotation = -0.0820942
scale = Vector2( 0.220958, 0.220958 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="DescriptionAnimated/Column1"]
position = Vector2( -2.78699, -284.896 )
scale = Vector2( 7.55341, 7.55341 )
texture = ExtResource( 7 )
offset = Vector2( -1, 0 )
mode = 3
range_item_cull_mask = 4

[node name="titleBanner" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 724, 92 )
initialText = "Is that... Singing?"
revealOnReady = false

[node name="ResultsText" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 963, 1205 )
scale = Vector2( 0.65047, 0.65047 )
texture = ExtResource( 11 )

[node name="Blade1Bg" type="Sprite" parent="ResultsText"]
z_index = -1
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="ResultsText"]
margin_left = -576.507
margin_top = -78.4048
margin_right = 2291.49
margin_bottom = 325.595
rect_scale = Vector2( 0.407405, 0.407405 )
rect_clip_content = false
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "The sun falls below the horizon before the dinghy makes it back to the ship. The crew is gone, in their place a bright white bird's skull scoured clean by the salt water."
text = "The sun falls below the horizon before the dinghy makes it back to the ship. The crew is gone, in their place a bright white bird's skull scoured clean by the salt water."

[node name="descTTL" type="Timer" parent="."]
wait_time = 5.0

[node name="BannerPoint" type="Node2D" parent="."]
position = Vector2( 935, 192 )

[node name="OptionSelected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0

[node name="ClearResult" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.0

[connection signal="emit_clicked" from="DescriptionAnimated/Column1/Description/Option3" to="." method="parse_option_selected"]
[connection signal="emit_clicked" from="DescriptionAnimated/Column1/Description/Option2" to="." method="parse_option_selected"]
[connection signal="emit_clicked" from="DescriptionAnimated/Column1/Description/Option1" to="." method="parse_option_selected"]
